fix alignment of bottom corner CTA, main image on xxlarge viewport

--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -112,7 +112,7 @@ button {
     }
 
     @include breakpoint-up(xxlarge) {
-      bottom: -8px;
+      bottom: -6px;
     }
   }
 }
