--- a/src/scss/components/_glitch-img.scss
+++ b/src/scss/components/_glitch-img.scss
@@ -31,6 +31,7 @@
   @include breakpoint-up(xxlarge) {
     height: 625px;
     width: 450px;
+    justify-self: flex-end;
   }
 
   --gap-horizontal: 50px;
